# stable-retro-scripts

./: .clang-format  .gitignore  .pylintrc  LICENSE  NHL94-README.md  README.md  WWF-README.md  common.py  compare_model.py  display.py  envs.py  export_model.py  game_wrappers_mgr.py  model_trainer.py  model_vs_game.py  model_vs_model.py  models.py  multiplayer.py  nhl941on1_trainer.py  player_vs_model.py  singleplayer.py  test.py  test_setup.py  trainer.py  wwf_trainer.py
.github/: copilot-instructions.md
.github/workflows/: clang.yml  pylint.yml  test-cpp.yml
app/: CMakeLists.txt  README.md
app/regress/: runtest
app/src/: emulator.cpp  emulator.h
app/src/ui/: CMakeLists.txt  EmulatorController.cpp  EmulatorController.h  Makefile  main.cpp
app/src/ui/game_ai/: GameAI.cpp  GameAI.h  nhl94.cpp  nhl94.h
curriculum/: mk2.json  nhl94.json  nhl94_bctest.json
custom_trainers/: mk2_trainer.py  nhl941on1_trainer.py  wwf_trainer.py
ef_lib/: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  DefaultGameAI.cpp  DefaultGameAI.h  GameAI.cpp  GameAI.h  GameAILocal.cpp  GameAILocal.h  README.md  RetroModel.cpp  RetroModel.h  memory.h  nhl94.cpp  nhl94.h  test.cpp  utils.cpp
ef_lib/data/MortalKombatII-Genesis/: config.json
ef_lib/data/NHL941on1-Genesis/: config.json
ef_lib/games/: DefaultGameAI.cpp  DefaultGameAI.h  NHL94GameAI.cpp  NHL94GameAI.h  NHL94GameData.cpp  NHL94GameData.h
ef_lib/utils/: data.h  memory.h  unistd.h  utils.h
game_specific/: wwf_trainer.py
game_wrappers/: ai_sys.py  compare_model_display.py  display.py  display_fullscreen.py  display_pvp.py  nhl941on1_ai.py  nhl941on1_discretizer.py  nhl941on1_display.py  nhl941on1_display_pvp.py  nhl941on1_gamestate.py  nhl941on1_obs.py  nhl941on1_obs_2p.py  nhl941on1_rf.py  nhl94_ai.py  nhl94_const.py  nhl94_discretizer.py  nhl94_display.py  nhl94_display_pvp.py  nhl94_gamestate.py  nhl94_obs.py  nhl94_obs_2p.py  nhl94_rf.py  pong_obs.py
hyperparams/: default.json  mk2.json  nhl94.json  nhl94_gru_mlp.json  nhl94_mamba.json  nhl94_residual_mlp.json  pong.json  pong_tr.json
readmes/: NHL94-README.md  WWF-README.md
retro_ai_lib/: README.md
retro_ai_lib/data/NHL941on1-Genesis/: DefenseZone.pt  ScoreGoal.pt
retro_ai_lib/data/VirtuaFighter-32x/: config.json
retro_ai_lib/games/: DefaultGameAI.cpp  DefaultGameAI.h  NHL94GameAI.cpp  NHL94GameData.cpp  NHL94GameData.h
retro_ai_lib/utils/: data.cpp  data.h  memory.cpp  memory.h  unistd.h  utils.cpp
scripts/: bc_pretrain.py  classic_ai.py  classic_ai_v2.py  classic_ai_v3.py  collect_classic_ai_demos.py  common.py  compare_models.py  dagger_loop.py  env_utils.py  env_wrappers.py  envs.py  es.py  export_model.py  game_wrappers_mgr.py  imitation_utils.py  model_trainer.py  model_vs_game.py  model_vs_model.py  models.py  models_utils.py  play.py  player_vs_model.py  rpg_live.py  test.py  train.py  train_curriculum.py  train_live.py  utils.py
scripts/custom_trainers/: nhl941on1_trainer.py
scripts/game_wrappers/: ai_sys.py  display.py  display_pvp.py  fighter_obs.py  mk2_actions.py  mk2_obs.py  nhl94_ai.py  nhl94_const.py  nhl94_display.py  nhl94_display_debug.py  nhl94_gamestate.py  nhl94_mi.py  nhl94_obs.py  nhl94_rf.py  pong_obs.py
scripts/game_wrappers/mk2/: mk2_obs.py
scripts/game_wrappers/nhl94/: nhl94_ai.py  nhl94_const.py  nhl94_display.py  nhl94_display_debug.py  nhl94_display_pvp.py  nhl94_gamestate.py  nhl94_intents.py  nhl94_mi.py  nhl94_obs.py  nhl94_rf.py  nhl94_rf_az_lostpuck.py  nhl94_rf_breakaway.py  nhl94_rf_createopp.py  nhl94_rf_createopportunity.py  nhl94_rf_defensezone.py  nhl94_rf_general.py  nhl94_rf_getpuck.py  nhl94_rf_keeppuck.py  nhl94_rf_passing.py  nhl94_rf_postplay.py  nhl94_rf_scoregoal.py  nhl94_rf_selfplay.py
tests/: test_nhl94_model_input.py  test_sb1_retro_1p.py  test_sb1_retro_2p.py
